feat: dynamic auth using templates

--- a/pkg/authprovider/authx/testData/dynamic.yaml
+++ b/pkg/authprovider/authx/testData/dynamic.yaml
@@ -1,7 +1,6 @@
 id: test-dynamic
 dynamic:
-  - template-id: wordpress-login 
-    # template-path: /path/to/wordpress-login.yaml (optional)
+  - template-path: /path/to/wordpress-login.yaml
     variables:
       - name: username
         value: pdteam
