rename 'headers' -> 'header' in fuzzing rules

--- a/integration_tests/fuzz/fuzz-host-header-injection.yaml
+++ b/integration_tests/fuzz/fuzz-host-header-injection.yaml
@@ -18,7 +18,7 @@ http:
         condition: and
     
     fuzzing:
-      - part: headers
+      - part: header
         type: replace
         mode: single
         fuzz:
