--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,7 @@ pkg/protocols/headless/engine/.cache
 /fuzzplayground
 integration_tests/fuzzplayground
 /dsl.md
+/nuclei-stats
+/nuclei-stats-*
 
 
