--- a/integration_tests/protocols/dns/aaaa.yaml
+++ b/integration_tests/protocols/dns/aaaa.yaml
@@ -1,17 +1,17 @@
-id: basic-dns-example
+id: basic-dns-aaaa-example
 
 info:
-  name: Test DNS Template
+  name: Test DNS AAAA Query Template
   author: pdteam
   severity: info
 
 dns:
   - name: "{{FQDN}}"
-    type: A
+    type: AAAA
     class: inet
     recursion: true
     retries: 3
     matchers:
       - type: word
         words:
-          - "1.1.1.1"
+          - "2606:4700:4700::1001"
