--- a/integration_tests/protocols/dns/ns.yaml
+++ b/integration_tests/protocols/dns/ns.yaml
@@ -1,17 +1,18 @@
-id: dns-a-query-example
+id: dns-ns-query-example
 
 info:
-  name: Test DNS A Query Template
+  name: Test DNS NS Query Template
   author: pdteam
   severity: info
 
 dns:
   - name: "{{FQDN}}"
-    type: A
+    type: NS
     class: inet
     recursion: true
     retries: 3
     matchers:
       - type: word
+        part: all
         words:
-          - "1.1.1.1"
+          - "NS"
