--- a/integration_tests/fuzz/fuzz-path-sqli.yaml
+++ b/integration_tests/fuzz/fuzz-path-sqli.yaml
@@ -25,11 +25,10 @@ http:
     
     fuzzing:
       - part: path
-        type: replace-regex
+        type: replace
         mode: single
-        replace-regex: '/(.*?/)([0-9]+)(/.*)?'
         fuzz:
-          - '/${1}${2}{{pathsqli}}${3}'
+          - '{{pathsqli}}'
 
     matchers:
       - type: status
