fixed failing test

--- a/integration_tests/fuzz/fuzz-path-sqli.yaml
+++ b/integration_tests/fuzz/fuzz-path-sqli.yaml
@@ -15,17 +15,15 @@ http:
       - type: dsl
         dsl:
           - 'method == "GET"'
-          - regex("/(.*?/)([0-9]+)(/.*)?",path)
         condition: and
     
     payloads:
       pathsqli:
-        - "'OR1=1"
         - '%20OR%20True'
     
     fuzzing:
       - part: path
-        type: replace
+        type: postfix
         mode: single
         fuzz:
           - '{{pathsqli}}'
