ci: use composite actions
Signed-off-by: Dwi Siswanto <git@dw1.io>

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -12,23 +12,20 @@ jobs:
     name: Test Builds
     strategy:
       matrix:
-        go-version: [1.21.x]
         os: [ubuntu-latest, windows-latest, macOS-latest]
-
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: ${{ matrix.go-version }}
+      - name: Check out code
+        uses: actions/checkout@v4
 
-      - name: Set up Python   # required for running python code in py-snippet.yaml integration test
+      - name: Set up Go
+        uses: projectdiscovery/actions/setup/go@v1
+
+      # required for running python code in py-snippet.yaml integration test
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
-      - name: Check out code
-        uses: actions/checkout@v3
 
       - name: Go Mod hygiene
         run: |
