ci: remove hygiene (`clean -modcache`) with verify instead
Signed-off-by: Dwi Siswanto <git@dw1.io>

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,10 +27,8 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Go Mod hygiene
-        run: |
-          go clean -modcache
-          go mod tidy
+      - name: Verify Go modules
+        run: make verify
 
       - name: Build
         run: go build .
