--- a/.github/workflows/performance-test.yaml
+++ b/.github/workflows/performance-test.yaml
@@ -22,10 +22,8 @@ jobs:
       - name: Set up Go
         uses: projectdiscovery/actions/setup/go@v1
 
-      - name: Go Mod hygine
-        run: |
-          go clean -modcache
-          go mod tidy
+      - name: Verify Go modules
+        run: make verify
 
       # Max GH exection time 6H => timeout after that
       - name: Running performance with big list
