--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -3,6 +3,5 @@ reviewers:
   - dogancanbakir
 
 numberOfReviewers: 1
-# A list of keywords to be skipped the process that add reviewers if pull requests include it
-# skipKeywords:
-#   - wip
+skipKeywords:
+  - '@dependabot'
